Public Key integrated with Message Blocks

--- a/FinalProject/src/Makefile
+++ b/FinalProject/src/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -g -Wall -lssl -lcrypto
+CFLAGS = -g -Wall -lssl -lcrypto -lcryptopp
 DEPS = MessagePreprocess.h
 	
 .PHONY : all
