Updated Makefile to include new source files

--- a/FinalProject/src/Makefile
+++ b/FinalProject/src/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -g -Wall -lssl -lcrypto -lcryptopp
 DEPS = MessagePreprocess.h
 	
 .PHONY : all
-all: MessagePreprocess.exe NeedhamSchroederSymmetric.exe NeedhamSchroederPublicKey.exe
+all: MessagePreprocess.exe NeedhamSchroederSymmetric.exe NeedhamSchroederPublicKey.exe NeedhamSchroederSymmetricCTR.exe NeedhamSchroederModeComparison.exe
 
 #%.o: %.cpp $(DEPS)
 #	$(CC) $< $(CFLAGS) -c -o $@
@@ -16,6 +16,12 @@ NeedhamSchroederSymmetric.exe: NeedhamSchroederSymmetric.cpp
 
 NeedhamSchroederPublicKey.exe: NeedhamSchroederPublicKey.cpp
 	$(CC) -o NeedhamSchroederPublicKey.exe NeedhamSchroederPublicKey.cpp $(CFLAGS)
+
+NeedhamSchroederSymmetricCTR.exe: NeedhamSchroederSymmetricCTR.cpp
+	$(CC) -o NeedhamSchroederSymmetricCTR.exe NeedhamSchroederSymmetricCTR.cpp $(CFLAGS)
+
+NeedhamSchroederModeComparison.exe: NeedhamSchroederModeComparison.cpp
+	$(CC) -o NeedhamSchroederModeComparison.exe NeedhamSchroederModeComparison.cpp $(CFLAGS)
 
 clean:
 	rm *.exe
